navbar navegación en responsive

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <body>
     <div class="content-wrapper">
       <div class="content">
+        <!-- Navbar superior -->
         <nav class="navbar" role="navigation">
           <!-- Brand and toggle get grouped for better mobile display -->
           <div class="navbar-header">
@@ -31,6 +32,48 @@
               <li><a href="#"><img src="/assets/img/icons/icon12.png"></a></li>
               <li><a href="#"><img src="/assets/img/icons/icon4.png"></a></li>
               <li><a href="#"><img src="/assets/img/icons/icon14.png"></a></li>
+            </ul>
+          </div>
+        </nav>
+        <!-- Barra fecha -->
+        <div class="container-bar-date">
+          <h4><img src="/assets/img/icons/icon3-w.png">January 13, 2014 - February 11, 2014</h4>
+        </div>
+        <!-- Navbar inferior -->
+        <nav class="navbar navbar-default navbar-static-top hidden-phone" role="navigation">
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse in" id="navbar-general">
+            <ul class="nav navbar-nav navbar-general btn-group btn-group-justified">
+              <li class="active btn-group"><a href="#"><img src="/assets/img/icons/icon7.png" class="off"alt="">Inicio</a></li>
+              <li class="btn-group"><a href="#"><img src="/assets/img/icons/icon9.png" class="off"alt="">Facturas</a></li>
+              <li class="btn-group"><a href="#"><img src="/assets/img/icons/icon8.png" class="off"alt="">Presupuestos</a></li>
+              <li class="btn-group"><a href="#"><img src="/assets/img/icons/icon10.png" class="off"alt="">Gastos</a></li>
+              <li class="btn-group"><a href="#"><img src="/assets/img/icons/icon11.png" class="off"alt="">Pagos</a></li>
+              <li class="btn-group"><a href="#"><img src="/assets/img/icons/icon13.png" class="off"alt="">Informes</a></li>
+            </ul>
+          </div>
+        </nav>
+        <nav class="navbar navbar-default navbar-static-top visible-phone" role="navigation">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-general-1">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+          </div>
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="navbar-general-1">
+            <ul class="nav navbar-nav navbar-general">
+              <li class="active btn-group-justified"><a href="#"><img src="/assets/img/icons/icon7.png" class="off"alt="">Inicio</a></li>
+              <li class="btn-group-justified"><a href="#"><img src="/assets/img/icons/icon9.png" class="off"alt="">Facturas</a></li>
+              <li class="btn-group-justified"><a href="#"><img src="/assets/img/icons/icon8.png" class="off"alt="">Presupuestos</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-general">
+              <li class="btn-group-justified"><a href="#"><img src="/assets/img/icons/icon10.png" class="off"alt="">Gastos</a></li>
+              <li class="btn-group-justified"><a href="#"><img src="/assets/img/icons/icon11.png" class="off"alt="">Pagos</a></li>
+              <li class="btn-group-justified"><a href="#"><img src="/assets/img/icons/icon13.png" class="off"alt="">Informes</a></li>
             </ul>
           </div>
         </nav>
