--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
         <nav class="navbar navbar-default navbar-static-top visible-phone" role="navigation">
           <!-- Brand and toggle get grouped for better mobile display -->
           <div class="navbar-header">
+            <ul class="nav navbar-nav navbar-general navbar-general-collapsed">
+              <li class="navbar-active-phone"><img src="/assets/img/icons/icon7.png" class="off"alt="">Inicio</li>
+            </ul>
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-general-1">
               <span class="sr-only">Toggle navigation</span>
               <span class="icon-bar"></span>
@@ -66,7 +69,6 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="navbar-general-1">
             <ul class="nav navbar-nav navbar-general">
-              <li class="active btn-group-justified"><a href="#"><img src="/assets/img/icons/icon7.png" class="off"alt="">Inicio</a></li>
               <li class="btn-group-justified"><a href="#"><img src="/assets/img/icons/icon9.png" class="off"alt="">Facturas</a></li>
               <li class="btn-group-justified"><a href="#"><img src="/assets/img/icons/icon8.png" class="off"alt="">Presupuestos</a></li>
             </ul>
@@ -77,7 +79,83 @@
             </ul>
           </div>
         </nav>
+        <!-- Contenido home -->
+        <div class="container-body">
+          
+        </div>
+
+        <!-- Accesos directos -->
+        <div class="container-access-home">
+          <div class="box-access-home">
+            <div class="btn-group btn-block">
+              <div class="access-home">
+                <a class="btn btn-block" href="#">
+                  <img src="/assets/img/home/home-1.png" alt="">
+                  <h5>Nueva Factura</h5>
+                  <h4>+</h4>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="box-access-home">
+            <div class="btn-group btn-block">
+              <div class="access-home">
+                <a class="btn btn-block" href="#">
+                  <img src="/assets/img/home/home-5.png" alt="">
+                  <h5>Nueva Cliente</h5>
+                  <h4>+</h4>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="box-access-home">
+            <div class="btn-group btn-block">
+              <div class="access-home">
+                <a class="btn btn-block" href="#">
+                  <img src="/assets/img/home/home-3.png" alt="">
+                  <h5>Proveedor</h5>
+                  <h4>+</h4>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="box-access-home">
+            <div class="btn-group btn-block">
+              <div class="access-home">
+                <a class="btn btn-block" href="#">
+                  <img src="/assets/img/home/home-2.png" alt="">
+                  <h5>Productos</h5>
+                  <h4>+</h4>
+                </a>
+              </div>
+            </div>
+          </div><div class="box-access-home">
+            <div class="btn-group btn-block">
+              <div class="access-home">
+                <a class="btn btn-block" href="#">
+                  <img src="/assets/img/home/home-4.png" alt="">
+                  <h5>Compras</h5>
+                  <h4>+</h4>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="box-access-home">
+            <div class="btn-group btn-block">
+              <div class="access-home">
+                <a class="btn btn-block" href="#">
+                  <img src="/assets/img/home/home-6.png" alt="">
+                  <h5>Cuentas</h5>
+                  <h4>+</h4>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
+    </div>
+    <div class="footer">
+      <p>© 2014 - Gestor<span>ya</span></p>
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
@@ -87,6 +165,19 @@
   </body>
   <!-- Website developed by Waavi Studio http://waavi.com  -->
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
