--- a/reports.html
+++ b/reports.html
@@ -44,12 +44,12 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse in" id="navbar-general">
             <ul class="nav navbar-nav navbar-general btn-group btn-group-justified">
-              <li class="active btn-group"><a href="/index.html"><img src="/assets/img/icons/icon7.png" class="off"alt="">Inicio</a></li>
+              <li class="btn-group"><a href="/index.html"><img src="/assets/img/icons/icon7.png" class="off"alt="">Inicio</a></li>
               <li class="btn-group"><a href="/invoice.html"><img src="/assets/img/icons/icon9.png" class="off"alt="">Facturas</a></li>
               <li class="btn-group"><a href="/budget.html"><img src="/assets/img/icons/icon8.png" class="off"alt="">Presupuestos</a></li>
               <li class="btn-group"><a href="/expenses.html"><img src="/assets/img/icons/icon10.png" class="off"alt="">Gastos</a></li>
               <li class="btn-group"><a href="/payments.html"><img src="/assets/img/icons/icon11.png" class="off"alt="">Pagos</a></li>
-              <li class="btn-group"><a href="/reports.html"><img src="/assets/img/icons/icon13.png" class="off"alt="">Informes</a></li>
+              <li class="active btn-group"><a href="/reports.html"><img src="/assets/img/icons/icon13.png" class="off"alt="">Informes</a></li>
             </ul>
           </div>
         </nav>
@@ -57,7 +57,7 @@
           <!-- Brand and toggle get grouped for better mobile display -->
           <div class="navbar-header">
             <ul class="nav navbar-nav navbar-general navbar-general-collapsed">
-              <li class="navbar-active-phone"><img src="/assets/img/icons/icon7.png" class="off"alt="">Inicio</li>
+              <li class="navbar-active-phone"><img src="/assets/img/icons/icon13.png" class="off"alt="">Informes</li>
             </ul>
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-general-1">
               <span class="sr-only">Toggle navigation</span>
@@ -69,88 +69,19 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="navbar-general-1">
             <ul class="nav navbar-nav navbar-general">
+              <li class="btn-group-justified"><a href="/index.html"><img src="/assets/img/icons/icon7.png" class="off"alt="">Inicio</a></li>
               <li class="btn-group-justified"><a href="/invoice.html"><img src="/assets/img/icons/icon9.png" class="off"alt="">Facturas</a></li>
-              <li class="btn-group-justified"><a href="/budget.html"><img src="/assets/img/icons/icon8.png" class="off"alt="">Presupuestos</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-general">
-              <li class="btn-group-justified"><a href="/expenses.html"><img src="/assets/img/icons/icon10.png" class="off"alt="">Gastos</a></li>
+              <li class="btn-group-justified"><a href="/expenses.html"><img src="/assets/img/icons/icon8.png" class="off"alt="">Presupuestos</a></li>
+              <li class="btn-group-justified"><a href="/payments.html"><img src="/assets/img/icons/icon10.png" class="off"alt="">Gastos</a></li>
               <li class="btn-group-justified"><a href="/payments.html"><img src="/assets/img/icons/icon11.png" class="off"alt="">Pagos</a></li>
-              <li class="btn-group-justified"><a href="/reports.html"><img src="/assets/img/icons/icon13.png" class="off"alt="">Informes</a></li>
             </ul>
           </div>
         </nav>
         <!-- Contenido home -->
         <div class="container-body">
           
-        </div>
-
-        <!-- Accesos directos -->
-        <div class="container-access-home">
-          <div class="box-access-home">
-            <div class="btn-group btn-block">
-              <div class="access-home">
-                <a class="btn btn-block" href="#">
-                  <img src="/assets/img/home/home-1.png" alt="">
-                  <h5>Nueva Factura</h5>
-                  <h4>+</h4>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="box-access-home">
-            <div class="btn-group btn-block">
-              <div class="access-home">
-                <a class="btn btn-block" href="#">
-                  <img src="/assets/img/home/home-5.png" alt="">
-                  <h5>Nuevo Cliente</h5>
-                  <h4>+</h4>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="box-access-home">
-            <div class="btn-group btn-block">
-              <div class="access-home">
-                <a class="btn btn-block" href="#">
-                  <img src="/assets/img/home/home-3.png" alt="">
-                  <h5>Proveedor</h5>
-                  <h4>+</h4>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="box-access-home">
-            <div class="btn-group btn-block">
-              <div class="access-home">
-                <a class="btn btn-block" href="#">
-                  <img src="/assets/img/home/home-2.png" alt="">
-                  <h5>Productos</h5>
-                  <h4>+</h4>
-                </a>
-              </div>
-            </div>
-          </div><div class="box-access-home">
-            <div class="btn-group btn-block">
-              <div class="access-home">
-                <a class="btn btn-block" href="#">
-                  <img src="/assets/img/home/home-4.png" alt="">
-                  <h5>Compras</h5>
-                  <h4>+</h4>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="box-access-home">
-            <div class="btn-group btn-block">
-              <div class="access-home">
-                <a class="btn btn-block" href="#">
-                  <img src="/assets/img/home/home-6.png" alt="">
-                  <h5>Cuentas</h5>
-                  <h4>+</h4>
-                </a>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
     </div>
