--- a/invoice.html
+++ b/invoice.html
@@ -44,8 +44,8 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse in" id="navbar-general">
             <ul class="nav navbar-nav navbar-general btn-group btn-group-justified">
-              <li class="active btn-group"><a href="/index.html"><img src="/assets/img/icons/icon7.png" class="off"alt="">Inicio</a></li>
-              <li class="btn-group"><a href="/invoice.html"><img src="/assets/img/icons/icon9.png" class="off"alt="">Facturas</a></li>
+              <li class="btn-group"><a href="/index.html"><img src="/assets/img/icons/icon7.png" class="off"alt="">Inicio</a></li>
+              <li class="active btn-group"><a href="/invoice.html"><img src="/assets/img/icons/icon9.png" class="off"alt="">Facturas</a></li>
               <li class="btn-group"><a href="/budget.html"><img src="/assets/img/icons/icon8.png" class="off"alt="">Presupuestos</a></li>
               <li class="btn-group"><a href="/expenses.html"><img src="/assets/img/icons/icon10.png" class="off"alt="">Gastos</a></li>
               <li class="btn-group"><a href="/payments.html"><img src="/assets/img/icons/icon11.png" class="off"alt="">Pagos</a></li>
@@ -57,7 +57,7 @@
           <!-- Brand and toggle get grouped for better mobile display -->
           <div class="navbar-header">
             <ul class="nav navbar-nav navbar-general navbar-general-collapsed">
-              <li class="navbar-active-phone"><img src="/assets/img/icons/icon7.png" class="off"alt="">Inicio</li>
+              <li class="navbar-active-phone"><img src="/assets/img/icons/icon9.png" class="off"alt="">Facturas</li>
             </ul>
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-general-1">
               <span class="sr-only">Toggle navigation</span>
@@ -69,7 +69,7 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="navbar-general-1">
             <ul class="nav navbar-nav navbar-general">
-              <li class="btn-group-justified"><a href="/invoice.html"><img src="/assets/img/icons/icon9.png" class="off"alt="">Facturas</a></li>
+              <li class="btn-group-justified"><a href="/index.html"><img src="/assets/img/icons/icon7.png" class="off"alt="">Inicio</a></li>
               <li class="btn-group-justified"><a href="/budget.html"><img src="/assets/img/icons/icon8.png" class="off"alt="">Presupuestos</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-general">
@@ -81,75 +81,38 @@
         </nav>
         <!-- Contenido home -->
         <div class="container-body">
-          
-        </div>
-
-        <!-- Accesos directos -->
-        <div class="container-access-home">
-          <div class="box-access-home">
-            <div class="btn-group btn-block">
-              <div class="access-home">
-                <a class="btn btn-block" href="#">
-                  <img src="/assets/img/home/home-1.png" alt="">
-                  <h5>Nueva Factura</h5>
-                  <h4>+</h4>
-                </a>
+          <div class="container-filter">
+            <select class="form-control custom-select">
+              <option>Cliente</option>
+              <option>+Add Cliente</option>
+            </select>
+            <h5>Fecha de la factura</h5>
+            <div class="form-group">
+              <div class='input-group'>
+                <input type='text' class="form-control" />
+                <span class="input-group-addon"><img src="/assets/img/icons/icon3.png" alt=""></span>
               </div>
             </div>
+            <h5>Número</h5>
+            <div class="form-group">
+              <div class='input-group'>
+                <input type='text' class="form-control" />
+              </div>
+            </div>
+            <h5>Descuento</h5>
+            <div class="form-group">
+              <div class='input-group'>
+                <input type='text' class="form-control" />
+              </div>
+            </div>
+            <h5>IVA</h5>
+             <select class="form-control custom-select">
+              <option>21 %</option>
+              <option>+Add Taxas</option>
+            </select>
           </div>
-          <div class="box-access-home">
-            <div class="btn-group btn-block">
-              <div class="access-home">
-                <a class="btn btn-block" href="#">
-                  <img src="/assets/img/home/home-5.png" alt="">
-                  <h5>Nuevo Cliente</h5>
-                  <h4>+</h4>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="box-access-home">
-            <div class="btn-group btn-block">
-              <div class="access-home">
-                <a class="btn btn-block" href="#">
-                  <img src="/assets/img/home/home-3.png" alt="">
-                  <h5>Proveedor</h5>
-                  <h4>+</h4>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="box-access-home">
-            <div class="btn-group btn-block">
-              <div class="access-home">
-                <a class="btn btn-block" href="#">
-                  <img src="/assets/img/home/home-2.png" alt="">
-                  <h5>Productos</h5>
-                  <h4>+</h4>
-                </a>
-              </div>
-            </div>
-          </div><div class="box-access-home">
-            <div class="btn-group btn-block">
-              <div class="access-home">
-                <a class="btn btn-block" href="#">
-                  <img src="/assets/img/home/home-4.png" alt="">
-                  <h5>Compras</h5>
-                  <h4>+</h4>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="box-access-home">
-            <div class="btn-group btn-block">
-              <div class="access-home">
-                <a class="btn btn-block" href="#">
-                  <img src="/assets/img/home/home-6.png" alt="">
-                  <h5>Cuentas</h5>
-                  <h4>+</h4>
-                </a>
-              </div>
-            </div>
+          <div class="container-result">
+            
           </div>
         </div>
       </div>
