--- a/invoice.html
+++ b/invoice.html
@@ -79,7 +79,7 @@
             </ul>
           </div>
         </nav>
-        <!-- Contenido home -->
+        <!-- Contenido Factura -->
         <div class="container-body">
           <div class="container-filter">
             <select class="form-control custom-select">
@@ -112,7 +112,98 @@
             </select>
           </div>
           <div class="container-result">
-            
+            <h4>Nueva factura</h4>
+            <a href="" class="btn btn-success btn-success-table">Add Linea <i class="fa fa-plus-circle"></i></a>
+            <table class="table table-bordered">
+              <thead>
+                <tr>
+                  <th class="col-xs-6 col-md-3">Tema</th>
+                  <th class="col-md-4">Descripción</th>
+                  <th class="col-md-2">Precio</th>
+                  <th class="col-md-1">Cantidad</th>
+                  <th class="col-md-2">Total</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td><input type='text' class="form-control table-complet" /></td>
+                  <td><input type='text' class="form-control table-complet" /></td>
+                  <td><input type='text' class="form-control table-complet" /></td>
+                  <td><input type='text' class="form-control table-complet" /></td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td><input type='text' class="form-control table-complet" /></td>
+                  <td><input type='text' class="form-control table-complet" /></td>
+                  <td><input type='text' class="form-control table-complet" /></td>
+                  <td><input type='text' class="form-control table-complet" /></td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td><input type='text' class="form-control table-complet" /></td>
+                  <td><input type='text' class="form-control table-complet" /></td>
+                  <td><input type='text' class="form-control table-complet" /></td>
+                  <td><input type='text' class="form-control table-complet" /></td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td><input type='text' class="form-control table-complet" /></td>
+                  <td><input type='text' class="form-control table-complet" /></td>
+                  <td><input type='text' class="form-control table-complet" /></td>
+                  <td><input type='text' class="form-control table-complet" /></td>
+                  <td></td>
+                </tr>
+              </tbody>
+            </table>
+            <div class="col-md-3">
+              <div class="row">
+                <h5>Nota</h5>
+                <div class="form-group">
+                  <div class="row">
+                    <div class="col-md-12">
+                      <textarea class="form-control form-complet" rows="3"></textarea>
+                    </div>
+                  </div>
+                </div>
+                <h5>Condiciones</h5>
+                <div class="form-group">
+                  <div class="row">
+                    <div class="col-md-12">
+                      <textarea class="form-control form-complet" rows="3"></textarea>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="container-invoice">
+              <div class="col-md-9">
+                <div class="form-group">
+                  <div class="row">
+                    <label class="col-sm-5 control-label">Subtotal</label>
+                    <div class="col-sm-7">
+                      <input type="text" class="form-control form-complet">
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <label class="col-sm-5 control-label">Fecha de vencimiento</label>
+                  <div class="col-sm-7">
+                    <input type="text" class="form-control form-complet" placeholder="31-12-2014">
+                  </div>
+                </div>
+                <div class="form-group">
+                  <div class="row">
+                    <div class="col-sm-offset-5 col-sm-7">
+                      <div class="btn-group">
+                        <a  href="" type="submit" class="btn btn-success">Descargar PDF</a>
+                        <a  href="" type="submit" class="btn btn-info">Guardar</a>
+                        <a  href="" type="submit" class="btn btn-warning">Enviar</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
