--- a/budget.html
+++ b/budget.html
@@ -89,20 +89,20 @@
             <h5>Fecha del presupuesto</h5>
             <div class="form-group">
               <div class='input-group'>
-                <input type='text' class="form-control" />
+                <input type='text' class="form-control" placeholder="01-10-2014">
                 <span class="input-group-addon"><img src="/assets/img/icons/icon3.png" alt=""></span>
               </div>
             </div>
             <h5>Número</h5>
             <div class="form-group">
               <div class='input-group'>
-                <input type='text' class="form-control" />
+                <input type='text' class="form-control" placeholder="001">
               </div>
             </div>
             <h5>Descuento</h5>
             <div class="form-group">
               <div class='input-group'>
-                <input type='text' class="form-control" />
+                <input type='text' class="form-control" placeholder="10 %">
               </div>
             </div>
             <h5>IVA</h5>
@@ -121,36 +121,36 @@
                   <th class="col-md-4">Descripción</th>
                   <th class="col-md-2">Precio</th>
                   <th class="col-md-1">Cantidad</th>
-                  <th class="col-md-2">Total</th>
+                  <th class="col-md-2 table-total">Total</th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
-                  <td><input type='text' class="form-control table-complet" /></td>
-                  <td><input type='text' class="form-control table-complet" /></td>
-                  <td><input type='text' class="form-control table-complet" /></td>
-                  <td><input type='text' class="form-control table-complet" /></td>
+                  <td><input type='text' class="form-control table-complet" placeholder="Diseño"></td>
+                  <td><input type='text' class="form-control table-complet" placeholder="Elementos de papelería"></td>
+                  <td><input type='text' class="form-control table-complet" placeholder="50 €"></td>
+                  <td><input type='text' class="form-control table-complet" placeholder="10 unid"></td>
+                  <td class="table-total">500 €</td>
+                </tr>
+                <tr>
+                  <td><input type='text' class="form-control table-complet"></td>
+                  <td><input type='text' class="form-control table-complet"></td>
+                  <td><input type='text' class="form-control table-complet"></td>
+                  <td><input type='text' class="form-control table-complet"></td>
                   <td></td>
                 </tr>
                 <tr>
-                  <td><input type='text' class="form-control table-complet" /></td>
-                  <td><input type='text' class="form-control table-complet" /></td>
-                  <td><input type='text' class="form-control table-complet" /></td>
-                  <td><input type='text' class="form-control table-complet" /></td>
+                  <td><input type='text' class="form-control table-complet"></td>
+                  <td><input type='text' class="form-control table-complet"></td>
+                  <td><input type='text' class="form-control table-complet"></td>
+                  <td><input type='text' class="form-control table-complet"></td>
                   <td></td>
                 </tr>
                 <tr>
-                  <td><input type='text' class="form-control table-complet" /></td>
-                  <td><input type='text' class="form-control table-complet" /></td>
-                  <td><input type='text' class="form-control table-complet" /></td>
-                  <td><input type='text' class="form-control table-complet" /></td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td><input type='text' class="form-control table-complet" /></td>
-                  <td><input type='text' class="form-control table-complet" /></td>
-                  <td><input type='text' class="form-control table-complet" /></td>
-                  <td><input type='text' class="form-control table-complet" /></td>
+                  <td><input type='text' class="form-control table-complet"></td>
+                  <td><input type='text' class="form-control table-complet"></td>
+                  <td><input type='text' class="form-control table-complet"></td>
+                  <td><input type='text' class="form-control table-complet"></td>
                   <td></td>
                 </tr>
               </tbody>
@@ -194,10 +194,16 @@
                 <div class="form-group">
                   <div class="row">
                     <div class="col-sm-offset-5 col-sm-7">
-                      <div class="btn-group">
-                        <a  href="" type="submit" class="btn btn-success">Descargar PDF</a>
-                        <a  href="" type="submit" class="btn btn-info">Guardar</a>
-                        <a  href="" type="submit" class="btn btn-warning">Enviar</a>
+                      <div class="btn-group btn-group-justified">
+                        <div class="btn-group">
+                          <a href="" type="submit" class="btn btn-success">Descargar PDF</a>
+                        </div>
+                        <div class="btn-group">
+                          <a href="" type="submit" class="btn btn-info">Guardar</a>
+                        </div>
+                        <div class="btn-group">
+                          <a href="" type="submit" class="btn btn-warning">Enviar</a>
+                        </div>
                       </div>
                     </div>
                   </div>
