--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           </div>
         </nav>
         <!-- Contenido home -->
-        <div class="container-body">
+        <div class="container-body-home">
           
         </div>
 
