--- a/reports.html
+++ b/reports.html
@@ -81,7 +81,30 @@
         </nav>
         <!-- Contenido home -->
         <div class="container-body">
-          
+          <div class="container-filter">
+            <div class="form-group">
+              <div class='input-group'>
+                <input type='text' class="form-control" placeholder="Buscar cliente…">
+                <span class="input-group-addon"><img src="/assets/img/icons/icon24.png" alt=""></span>
+              </div>
+            </div>
+            <a href="" class="btn btn-green btn-block">Nueva factura <img src="/assets/img/icons/icon9-w.png" alt=""></a>
+            <a href="" class="btn btn-green btn-block">Nuevo presupuesto <img src="/assets/img/icons/icon8-w.png" alt=""></a>
+          </div>
+          <div class="container-result">
+            <h4>Estadísticas</h4>
+            <div class="col-sm-offset-4 col-sm-4">
+              <div class="container-pagination">
+                <ul class="pagination pagination-reports">
+                  <li class="disabled"><a href="#">&laquo;</a></li>
+                  <li><a href="#">2012</a></li>
+                  <li><a href="#">2013</a></li>
+                  <li class="active"><a href="#">2014 <span class="sr-only">(current)</span></a></li>
+                  <li><a href="#">&raquo;</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
