--- a/payments.html
+++ b/payments.html
@@ -81,7 +81,48 @@
         </nav>
         <!-- Contenido home -->
         <div class="container-body">
-          
+          <div class="container-filter">
+            <div class="form-group">
+              <div class='input-group'>
+                <input type='text' class="form-control" placeholder="Buscar cliente…">
+                <span class="input-group-addon"><img src="/assets/img/icons/icon24.png" alt=""></span>
+              </div>
+            </div>
+            <a href="" class="btn btn-green btn-block">Nueva factura <img src="/assets/img/icons/icon9-w.png" alt=""></a>
+            <a href="" class="btn btn-green btn-block">Nuevo presupuesto <img src="/assets/img/icons/icon8-w.png" alt=""></a>
+          </div>
+          <div class="container-result">
+            <h4>Nuevo pago</h4>
+            <p>Introducir información para el pago en efectivo</p>
+            <div class="row">
+              <div class="col-sm-4">
+                <h5>DESCRIPCIÓN (opcional)</h5>
+                <div class="form-group">
+                  <input type='text' class="form-control form-complet">
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <h5>Fecha</h5>
+                <div class="form-group">
+                  <div class='input-group'>
+                    <input type='text' class="form-control form-complet" placeholder="30-10-2014">
+                    <span class="input-group-addon"><img src="/assets/img/icons/icon3.png" alt=""></span>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <h5>Importe</h5>
+                <div class="form-group">
+                  <input type='text' class="form-control form-complet" placeholder="0,00 €">
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-offset-4 col-sm-4">
+                <a href="" type="submit" class="btn btn-success btn-success-table btn-block">Guardar pago</a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
