--- a/new-expenses.html
+++ b/new-expenses.html
@@ -82,12 +82,17 @@
         <!-- Contenido Gastos -->
         <div class="container-body">
           <div class="container-filter">
-            <a href="/new-expenses.html" class="btn btn-green btn-block">Nuevo gasto <img src="/assets/img/icons/icon10-w.png" alt=""></a>
-            <h5>Filtros</h5>
+            <h5>Fecha</h5>
+            <div class="form-group">
+              <div class='input-group'>
+                <input type='text' class="form-control" placeholder="01-10-2014">
+                <span class="input-group-addon"><img src="/assets/img/icons/icon3.png" alt=""></span>
+              </div>
+            </div>
             <div class="form-group">
               <select class="form-control custom-select">
-                <option>Confirmados</option>
-                <option>Borradores</option>
+                <option>España</option>
+                <option>Italia</option>
               </select>
             </div>
             <div class="form-group">
@@ -97,97 +102,47 @@
               </select>
             </div>
             <div class="form-group">
+              <div class='input-group'>
+                <input type='text' class="form-control" placeholder="Descripción del gasto">
+              </div>
+            </div>
+            <h5>Preció</h5>
+            <div class="form-group">
+              <div class='input-group'>
+                <input type='text' class="form-control" placeholder="0,00">
+              </div>
+            </div>
+            <h5>Iva</h5>
+            <div class="form-group">
               <select class="form-control custom-select">
-                <option>Tipo de gasto</option>
-                <option>Add Tipo de gasto</option>
+                <option>21%</option>
+                <option>8%</option>
               </select>
             </div>
-            <div class="form-group">
-              <div class='input-group'>
-                <input type='text' class="form-control" placeholder="Importe desde…">
+            <h5>Totales</h5>
+            <div class="row">
+              <div class="col-sm-8">
+                <p>Subtotales</p>
               </div>
-            </div>
-            <h5>Después</h5>
-            <div class="form-group">
-              <div class='input-group'>
-                <input type='text' class="form-control" placeholder="01-10-2014">
-                <span class="input-group-addon"><img src="/assets/img/icons/icon3.png" alt=""></span>
+              <div class="col-sm-4">
+                <p class="total-right">0,00</p>
               </div>
-            </div>
-            <h5>Antes</h5>
-            <div class="form-group">
-              <div class='input-group'>
-                <input type='text' class="form-control" placeholder="30-10-2014">
-                <span class="input-group-addon"><img src="/assets/img/icons/icon3.png" alt=""></span>
+              <div class="col-sm-8">
+                <p>Iva 21 % de 0,00</p>
+              </div>
+              <div class="col-sm-4">
+                <p class="total-right">0,00</p>
+              </div>
+              <div class="col-sm-8">
+                <h5 class="total">Total</h5>
+              </div>
+              <div class="col-sm-4">
+                <p class="total total-right">0,00</p>
               </div>
             </div>
           </div>
           <div class="container-result">
             <h4>Todos los gastos</h4>
-            <div class="form-group">
-              <div class="row">
-                <div class="col-sm-offset-4 col-sm-4">
-                  <div class="btn-group btn-group-justified">
-                    <div class="btn-group">
-                      <a href="" type="submit" class="btn btn-success btn-success-table">Confirmados</a>
-                    </div>
-                    <div class="btn-group">
-                      <a href="" type="submit" class="btn btn-success-table btn-default">Borradores</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <table class="table table-bordered">
-              <thead>
-                <tr>
-                  <th class="col-md-1">Fecha</th>
-                  <th class="col-md-3">Proveeor</th>
-                  <th class="col-md-2">Concepto</th>
-                  <th class="col-md-2">Tipo de gasto</th>
-                  <th class="col-md-2">Gasto</th>
-                  <th class="col-md-2 table-total">total</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td class="table-list">20/04/2014</td>
-                  <td class="table-list"><a href="" class="link-table">Max Olvido</a></td>
-                  <td class="table-list">Nómina</td>
-                  <td class="table-list"><a href="" class="link-table">Nómina</a></td>
-                  <td class="table-list">650,00 €</td>
-                  <td class="table-total table-list">650,00 €</td>
-                  <td class="table-total table-list"><a href="" class="link-table"><img src="/assets/img/icons/icon15.png" alt=""></a></td>
-                </tr>
-                <tr>
-                  <td class="table-list">12/08/2014</td>
-                  <td class="table-list"><a href="" class="link-table">Marta Casas</a></td>
-                  <td class="table-list">Extra</td>
-                  <td class="table-list"><a href="" class="link-table">Libre</a></td>
-                  <td class="table-list">300,00 €</td>
-                  <td class="table-total table-list">300,00 €</td>
-                  <td class="table-total table-list"><a href="" class="link-table"><img src="/assets/img/icons/icon15.png" alt=""></a></td>
-                </tr>
-                <tr>
-                  <td class="table-list">04/10/2014</td>
-                  <td class="table-list"><a href="" class="link-table">Pau Lopez</a></td>
-                  <td class="table-list">Nómina</td>
-                  <td class="table-list"><a href="" class="link-table">Setiembre</a></td>
-                  <td class="table-list">1250,00 €</td>
-                  <td class="table-total table-list">1250,00 €</td>
-                  <td class="table-total table-list"><a href="" class="link-table"><img src="/assets/img/icons/icon15.png" alt=""></a></td>
-                </tr>
-              </tbody>
-            </table>
-            <div class="container-pagination">
-              <ul class="pagination">
-                <li class="disabled"><a href="#">&laquo;</a></li>
-                <li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">&raquo;</a></li>
-              </ul>
-            </div>
           </div>
         </div>
       </div>
