--- a/new-expenses.html
+++ b/new-expenses.html
@@ -7,7 +7,7 @@
     <meta name="author"   content="Waavi Studio">
     <title>GESTORYA</title>
     <link rel="shortcut icon" href="/assets/img/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="/css/gestorya.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/gestorya.css">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="//use.typekit.net/klh0kvy.js"></script>
     <script>try{Typekit.load();}catch(e){}</script>
@@ -142,7 +142,15 @@
             </div>
           </div>
           <div class="container-result">
-            <h4>Todos los gastos</h4>
+            <h4>Nuevo gasto</h4>
+            <a href="#" class="upload-document">
+              <img src="/assets/img/icons/icon23-w.png" alt="">
+              <h3><span>Cargar</span> documento</h3>
+              <p>(jpg, png, o pdf)</p>
+            </a>
+            <div class="container-button">
+              <a href="" type="submit" class="btn btn-success">Guardar gasto</a>
+            </div>
           </div>
         </div>
       </div>
@@ -152,7 +160,6 @@
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-    <script src="//maps.google.com/maps/api/js?sensor=false&amp;region=US&amp;language=en'"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
   </body>
