--- a/invoice.html
+++ b/invoice.html
@@ -106,7 +106,7 @@
                     </select>
                   </div>
                   <div class="form-group col-sm-3">
-                    <button type="submit" class="btn btn-default btn-group-justified">Filtrar</button>
+                    <button type="submit" class="btn btn-filter btn-group-justified">Filtrar</button>
                   </div>
                 </div>
               </form>
@@ -141,7 +141,7 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <td class="table-list"><i class="fa fa-check-square"></i></td>
+                    <td class="table-list"><img src="/assets/img/icons/pagado.png" class="img-icon"alt=""></td>
                     <td class="table-list"><a href="" class="link-table">Max Olvido</a></td>
                     <td class="table-list">20/04/2014</td>
                     <td class="table-list"><a href="" class="link-table">0</a></td>
@@ -153,15 +153,67 @@
                           <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-                          <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Abrir</a></li>
-                          <li role="presentation" class="divider"></li>
-                          <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Cobro</a></li>
-                          <li role="presentation" class="divider"></li>
-                          <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Enviar</a></li>
-                          <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Mostrar PDF</a></li>
-                          <li role="presentation" class="divider"></li>
-                          <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Copiar</a></li>
-                          <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Eliminar</a></li>
+                          <li><a href="#">Abrir</a></li>
+                          <li class="divider"></li>
+                          <li><a href="#">Cobro</a></li>
+                          <li class="divider"></li>
+                          <li><a href="#">Enviar</a></li>
+                          <li><a href="#">Mostrar PDF</a></li>
+                          <li class="divider"></li>
+                          <li><a href="#">Copiar</a></li>
+                          <li><a href="#">Eliminar</a></li>
+                        </ul>
+                      </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="table-list"><img src="/assets/img/icons/espera.png" class="img-icon"alt=""></td>
+                    <td class="table-list"><a href="" class="link-table">Max Olvido</a></td>
+                    <td class="table-list">20/04/2014</td>
+                    <td class="table-list"><a href="" class="link-table">0</a></td>
+                    <td class="table-list">650,00 €</td>
+                    <td class="table-button">
+                      <div class="dropdown">
+                        <button class="btn btn-default btn-default-table btn-block dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
+                          Opciones
+                          <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+                          <li><a href="#">Abrir</a></li>
+                          <li class="divider"></li>
+                          <li><a href="#">Cobro</a></li>
+                          <li class="divider"></li>
+                          <li><a href="#">Enviar</a></li>
+                          <li><a href="#">Mostrar PDF</a></li>
+                          <li class="divider"></li>
+                          <li><a href="#">Copiar</a></li>
+                          <li><a href="#">Eliminar</a></li>
+                        </ul>
+                      </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="table-list"><img src="/assets/img/icons/proceso.png" class="img-icon"alt=""></td>
+                    <td class="table-list"><a href="" class="link-table">Max Olvido</a></td>
+                    <td class="table-list">20/04/2014</td>
+                    <td class="table-list"><a href="" class="link-table">0</a></td>
+                    <td class="table-list">650,00 €</td>
+                    <td class="table-button">
+                      <div class="dropdown">
+                        <button class="btn btn-default btn-default-table btn-block dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
+                          Opciones
+                          <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+                          <li><a href="#">Abrir</a></li>
+                          <li class="divider"></li>
+                          <li><a href="#">Cobro</a></li>
+                          <li class="divider"></li>
+                          <li><a href="#">Enviar</a></li>
+                          <li><a href="#">Mostrar PDF</a></li>
+                          <li class="divider"></li>
+                          <li><a href="#">Copiar</a></li>
+                          <li><a href="#">Eliminar</a></li>
                         </ul>
                       </div>
                     </td>
